[gd_scene load_steps=7 format=3 uid="uid://bxtsq1oioq3pk"]

[ext_resource type="Script" path="res://StarFX.gd" id="1_y5tl7"]
[ext_resource type="Texture2D" uid="uid://cc2ss0k3a6x2f" path="res://resources/victory_stars/victory_star_3.png" id="2_iqxsb"]
[ext_resource type="Texture2D" uid="uid://brk2pctdtab37" path="res://resources/victory_stars/victory_star_2.png" id="3_lt3xh"]
[ext_resource type="Texture2D" uid="uid://xo8g3p4el5iq" path="res://resources/victory_stars/victory_star_1.png" id="4_2ylwk"]
[ext_resource type="Texture2D" uid="uid://dquexhra6htyh" path="res://resources/victory_stars/victory_star_4.png" id="5_b66h0"]
[ext_resource type="Script" path="res://resources/nodes/mover.gd" id="6_jami5"]

[node name="StarFX" type="Node2D"]
script = ExtResource("1_y5tl7")

[node name="BigStar" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_iqxsb")

[node name="MediumStar" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_lt3xh")

[node name="SmallStar" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_2ylwk")

[node name="TinyStar" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_b66h0")

[node name="Mover" type="Node" parent="."]
script = ExtResource("6_jami5")
ease = 1
